# test-opencl-caffe-api

./: CMakeLists.txt  clManager.cpp  clManager.hpp  test.cpp
bvlc_googlenet/: get_model.sh
